objects/QuoteLineItem.object
<CustomObject>
    <fields>
        <fullName>Carrier_code__c</fullName>
        <label>Carrier Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DHL</fullName>
                </value>
                <value>
                    <fullName>ATS Transportation</fullName>
                </value>
                <value>
                    <fullName>Airborne</fullName>
                </value>
                <value>
                    <fullName>Apple Express</fullName>
                </value>
                <value>
                    <fullName>Apple PC Optimum (Cold Chain)</fullName>
                </value>
                <value>
                    <fullName>Canada Post</fullName>
                </value>
                <value>
                    <fullName>Courier Plus</fullName>
                </value>
                <value>
                    <fullName>Erb Transport</fullName>
                </value>
                <value>
                    <fullName>Federal Express</fullName>
                </value>
                <value>
                    <fullName>Local Delivery</fullName>
                </value>
                <value>
                    <fullName>Purolator Courier</fullName>
                </value>
                <value>
                    <fullName>Rogue Specialty Transportation</fullName>
                </value>
                <value>
                    <fullName>Skelton Truck Lines</fullName>
                </value>
                <value>
                    <fullName>United Messenger</fullName>
                </value>
                <value>
                    <fullName>Emery</fullName>
                </value>
                <value>
                    <fullName>UPS</fullName>
                </value>
                <value>
                    <fullName>US Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Written__c</fullName>
        <label>Date Written</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Supply__c</fullName>
        <label>Days Supply</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Supply_ck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Days Supply</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dose__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dose</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drug__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Drug</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fill_Date__c</fullName>
        <label>Fill Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lot_Number__c</fullName>
        <label>Lot Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MD_Sig__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MD Sig</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Physician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Physician</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Prescriber__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>Quote_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QuoteId__c</fullName>
        <label>QuoteId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refills_Authorized__c</fullName>
        <label>Refills Authorized</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Refills_Remaining__c</fullName>
        <label>Refills Remaining</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rx_Number__c</fullName>
        <label>Rx Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Date__c</fullName>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipping_Cost__c</fullName>
        <label>Shipping Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shipping_Instructions__c</fullName>
        <label>Shipping Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Shipping_Method__c</fullName>
        <label>Shipping Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Next Day</fullName>
                </value>
                <value>
                    <fullName>Same Day</fullName>
                </value>
                <value>
                    <fullName>2 Day Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <label>Tracking Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>